# mesa-client

./: BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.ci/: build.ps1  build.sh  signing.gradle
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: desktop-win.yml  desktop.yml  mobile.yml
scripts/: build.ps1  build.sh
src/: App.vue  Home.vue  Login.vue  Register.vue  main.ts  router.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/locales/: en.json  ru.json
