[package]
name = "mesa-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mesa_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
base64 = "0.22.1"
rand_core = { version = "0.6.4", features = ["std"] }
rand = "0.9.1"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["sha2"] }
sha2 = "0.10.9"
reqwest = { version = "0.12.22", features = ["json"] }
tauri-plugin-os = "2.3.0"
